--- a/src/platformio.ini
+++ b/src/platformio.ini
@@ -28,6 +28,7 @@ extra_configs =
 	targets/vantac_2400.ini
 	targets/Jumper_2400.ini
 	targets/radiomaster_2400.ini
+	targets/yarrtx_2400.ini
 
 # ------------------------- TARGET ENV DEFINITIONS -----------------
 
